WP-8528 social data spacing issues fixed

--- a/css/conditionals/full-width-front.css
+++ b/css/conditionals/full-width-front.css
@@ -5,10 +5,46 @@
   margin-top: 70px;
   padding: 80px 0 0 80px;
 }
+@media (max-width: 37.4375em) {
+  .panels-layout-gsb-homepage .pane-bundle-embed-stackla {
+    padding-left: 20px;
+    height: 530px;
+  }
+}
+@media (min-width: 48em) and (max-width: 63.9375em) {
+  .panels-layout-gsb-homepage .pane-bundle-embed-stackla {
+    padding-left: 25px;
+    height: 500px;
+  }
+}
+@media (min-width: 60em) and (max-width: 68.75em) and (orientation: landscape) {
+  .panels-layout-gsb-homepage .pane-bundle-embed-stackla {
+    padding-left: 25px;
+    height: 500px;
+  }
+}
 .panels-layout-gsb-homepage .pane-bundle-embed-stackla:before {
   content: "Stanford GSB Community on Social";
   color: white;
   display: inline-block;
   font-size: 36px;
   padding-bottom: 50px;
+}
+@media (max-width: 37.4375em) {
+  .panels-layout-gsb-homepage .pane-bundle-embed-stackla:before {
+    font-size: 26px;
+    padding-bottom: 30px;
+  }
+}
+@media (min-width: 48em) and (max-width: 63.9375em) {
+  .panels-layout-gsb-homepage .pane-bundle-embed-stackla:before {
+    font-size: 30px;
+    padding-bottom: 35px;
+  }
+}
+@media (min-width: 60em) and (max-width: 68.75em) and (orientation: landscape) {
+  .panels-layout-gsb-homepage .pane-bundle-embed-stackla:before {
+    font-size: 30px;
+    padding-bottom: 35px;
+  }
 }
